k8s-manifests/network/istio.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-demo-8
spec:
  hosts:
  - go-demo-8
  http:
  - route:
    - destination:
        host: go-demo-8
        subset: primary
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go-demo-8
spec:
  host: go-demo-8
  subsets:
  - name: primary
    labels:
      release: primary
